--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -346,7 +346,7 @@
       "pronouns": "él",
       "location": "Bangalore, India",
       "title": "Plastic Sweeper",
-      "description": "Plastic sweeper is a data visualization that helps the user imagine the true magnitude of plastic waste in our oceans. This is important because most people cannot understand the actual scale of large numbers and I feel this is one of the reasons why people are apathetic towards climate change and pollution.",
+      "description": "Plastic sweeper (Barredor de plástico) es una visualización de datos que ayuda al usuario imaginar la real magnitud real del desecho plástico en nuestros océanos. Esto es importante porque la mayoría de la gente no puede entender la magnitud real de los números grandes, y creo que esta es una de las razones por las que la gente es apática hacia el cambio climático y la contaminación.",
       "extradesc": "",
       "live": "https://kind-lovelace-0bae83.netlify.app/",
       "code": "https://github.com/CommieP/PLASTICSWEEPER",
@@ -367,7 +367,7 @@
       "pronouns": "she/her",
       "location": "Seoul, Korea",
       "title": "youtube.nextnextnext.video",
-      "description": "Youtube.nextnextnext.video is a website that visualizes the relationship of the original video and the recommended “next videos\".",
+      "description": "Youtube.nextnextnext.video es un sitio web que visualiza la relación del video original y los “siguientes\" videos recomendados.",
       "extradesc": "Youtube endlessly recommends the next video when the original is played. The next video becomes unrelated with the very first video when the recommendation is repeated. When the video which has been already shown before is recommended, the \"next\" video chain will be stopped at the screen. The user can search their own keyword and test the visualization of the recommended next video chain. The first result of the search keyword located close to the starting point and moves farther when the recommendation chain depth is deeper. If the video is recommended several times, the nodes will overlap. The data of the search keyword's results and their recommended next videos has been crawled with Ruby and visualized with p5.js.",
       "live": "https://youTube.nextnextnext.video",
       "code": "https://github.com/marxil/youtube-nextnextnext-video",
@@ -388,7 +388,7 @@
       "pronouns": "she/her",
       "location": "Seoul, Korea",
       "title": "Bezier Lion Mask",
-      "description": "Lion is one of the characters in traditional Korean Mask Dance shows and stands for being affluent and punishing the evils. Amongst the many meanings it has, I was particularly drawn by one where the guardian-like character stands for fighting against corruption and protecting the powerless.",
+      "description": "Lion (león) es uno de los personajes en los bailes de máscaras coreanos tradicionales y simboliza la abundancia y el castigo de lo malvado. Entre los múltiples significados que tiene, me atrajo particularme uno donde un personaje tipo guardián simboliza la lucha contra la corrupción y la protección de los desprotegidos.",
       "extradesc": "",
       "live": "https://editor.p5js.org/sosunnyproject/present/LIOvMfYco",
       "code": "https://editor.p5js.org/sosunnyproject/sketches/LIOvMfYco",
@@ -409,7 +409,7 @@
       "pronouns": "he/him",
       "location": "New York, US",
       "title": "Cyberflowers",
-      "description": "Combining the beauty of digital typography and computational design, Cyberflowers explore a new way to appreciate literal materials in the cyberspace by embodying their content and sentiment in flowers, with characters from the text being stamen and petals.",
+      "description": "Combinando la belleza de la tipografía digital y el diseño computacional, Cyberflowers (flores cibernéticas) exploran una manera nueva de apreciar materiales literales en el ciberespacio al hacer cuerpo su contenido y sentimiento en flores, con caracteres del texto convirtiéndose en tallos y pétalos.",
       "extradesc": "The project was developed with p5.js and demonstrated by the interactive Chrome extension as a proof of concept.",
       "live": "https://blog.jpl.design/posts/pixel-by-pixel/cyberflowers/",
       "code": "https://github.com/peilingjiang/cyberflowers",
@@ -430,7 +430,7 @@
       "pronouns": "they/them",
       "location": "Carrabassett Valley, Maine",
       "title": "mouseText",
-      "description": "mouseText is an interactive poem using p5.js's WEBGL library. Arrow keys and mouse clicks animate, reveal, and otherwise change the way that the poem is read. Thematically the poem is about a troubled relationship with technology and intimacy, which gets informed by the reader's movements.",
+      "description": "mouseText (textoRatón) es un poema interactivo usando la biblioteca WEBGL de p5.js. Las teclas de flecha y los clicks del ratón se encargan de mostrar, revelar, y también cambiar la forma en que se lee el poema. Temáticamente, el poema es sobre una relación compleja con la tecnología y la intimidad, lo que es informado por los movimientos del lector.",
       "extradesc": "",
       "live": "https://editor.p5js.org/hannahtardie/full/jLRmt2khh",
       "code": "https://editor.p5js.org/hannahtardie/sketches/jLRmt2khh",
@@ -451,7 +451,7 @@
       "pronouns": "she/her",
       "location": "Pittsburgh, USA",
       "title": "Cozy Coding",
-      "description": "A streaming channel that broadcasts relaxed, beginner-friendly, and comfy creative coding streams that focus on p5.js multiple times a week.",
+      "description": "Un canal de streaming que transmite programas relajados, enfocados a principiantes, y cómodos, sobre programación creativa que se enfocan en p5.js, ocurriendo múltiples veces a la semana.",
       "extradesc": "",
       "live": "https://twitch.tv/cozycoding",
       "code": "https://editor.p5js.org/aahdee/sketches",
@@ -492,7 +492,7 @@
       "pronouns": "she/her",
       "location": "New York City, United States",
       "title": "The Fractal Zone",
-      "description": "An interactive fractal tree machine based on L-Systems.",
+      "description": "Una máquina de árboles fractal interactiva, basada en sistemas L.",
       "extradesc": "The Fractal Zone is a pair project I made with Sean Brown that houses a \"Fractal Machine\", which draws fractal trees to a canvas based on user parameters. Fractal design patterns can then be persisted to the gallery along with their parameters and a downloadable image.",
       "live": "https://thefractal.zone",
       "code": "https://github.com/Rizz0S/the-fractal-zone",
@@ -513,7 +513,7 @@
       "pronouns": "he/him",
       "location": "New York City, USA",
       "title": "Let the music play!",
-      "description": "An interactive listen-and-guess game to provide the audience with a sensual association between 24 instruments and their sounds.",
+      "description": "Un juego interactivo de escuchar y adivinar, para proveerle a la audiencia una asociación sensual entre 24 instrumentos y sus sonidos.",
       "extradesc": "This is an experimental interactive project based on Met's instruments collection for educational purposes. The project aims to provide the audience with a sensual association between the 24 incredible instruments and their sounds. Each round, the application will randomly pick three instruments. The user will need to listen to a sound clip and try to figure out which type of instrument is used to perform the music.",
       "live": "https://shuvitran.github.io/LetTheMusicPlay/",
       "code": "https://github.com/shuvitRan/LetTheMusicPlay",
@@ -534,7 +534,7 @@
       "pronouns": "she/her",
       "location": "Tokyo, Japan.",
       "title": "En to Oto.",
-      "description": "Interactive visualization where tapping on the screen or typing creates various circles are animated in time with the sound.",
+      "description": "Visualización interactiva donde al tocar la pantalla o al escribir se crean varios círculos que son animados en el tiempo con el sonido.",
       "extradesc": "The title \"En to Oto” is Japanese and means \"circles and sounds\" in English.\n\nThe meaning of \"En\" (円) is \"circle\" and is probably the first shape most people will draw in p5.js. There is another word in Japanese that we call \"En\", it is spelled like “縁” and means chance or connection. Whether you are new to programming or not, regardless of country or gender, all people can enjoy media art.",
       "live": "https://en2oto.netlify.com/",
       "code": "",
@@ -555,7 +555,7 @@
       "pronouns": "he/him",
       "location": "Santiago, Chile",
       "title": "Trees of Translation",
-      "description": "A visualization of human text-writing and translation processes.",
+      "description": "Una visualización de escritura textual humana y procesos de traducción.",
       "extradesc": "For this project, document changelogs of poetic translation are visualized with a unique structure, where each character inserted is a line, forming branches in tree-like structures that reveal the translator's way of writing, creating a visual poem in themselves. Poems of American poet Emily Dickinson and Chilean poet Victoria Ramírez were translated into each other's language and data of the translation process was obtained with Google Docs.",
       "live": "http://trees-of-translation.baltazarperez.com",
       "code": "",
@@ -576,7 +576,7 @@
       "pronouns": "he/him",
       "location": "Japan",
       "title": "Justice in COVID-19",
-      "description": "Currently, COVID-19 is spreading over the world. In my country, Japan, there are threats against stores that don't respond to self-restraint and blades are scattered in the sandbox of a park in order to prevent many children from playing. Probably, the perpetrators of these acts think it is the right thing to do, but it is a twisted sense of justice.",
+      "description": "Actualmente, COVID-19 se está esparciendo por el mundo. En mi país, Japón, hay amenazas contra tiendas que no responden a la auto contención y hay cuchillas en la caja de arena de un parque para evitar que muchos niños jueguen. Probablemente, les perpretadores des estos actos piensan que están haciendo lo correcto, pero es un torcido sentido de la justicia.",
       "extradesc": "Note from the curator: the main Japanese character in the visual means \"Justice\" in Japanese",
       "live": "https://editor.p5js.org/kyami/sketches/Y8x66NWMx",
       "code": "https://editor.p5js.org/kyami/sketches/Y8x66NWMx",
@@ -597,7 +597,7 @@
       "pronouns": "he/him",
       "location": "College Park, Maryland",
       "title": "lissajous-animated",
-      "description": "Draws random complex lissajous figures and animates them by graduating shifting their phase.",
+      "description": "Dibuja figuras lissajous complejas y aleatorias y las anima al mover gradualmente su fase.",
       "extradesc": "Click for a new random one; share yours through the permalink provided. \"Hack\" it by updating the address in the browser window.",
       "live": "https://caseylabrack.com/sketches/lissajous-animated/",
       "code": "https://github.com/caseylabrack/caseylabrack.github.io/tree/master/sketches/lissajous-animated",
@@ -618,7 +618,7 @@
       "pronouns": "he/him",
       "location": "Kolkata, India",
       "title": "Generative Identity",
-      "description": "Generate a beautiful visual pattern using your name!",
+      "description": "¡Genera un bello patrón visual usando tu nombre!",
       "extradesc": "Our names are a very integral part of our lives, yet we don’t get to choose them. They are influenced by various factors such as race, religion and socio-economic status, in fact it is this same influence that makes them so important. Our names control our lives in ways we can’t fathom. Some studies suggest they decide what kind of jobs we get, what places we will live in and even what kind of people we will marry. It is weird to think about the fact we use pieces of language, whose sole concept is to be understood by everyone to label something that is supposed to be personal and unique. In this project I have coded a system that when given a name, generates a visual identity.",
       "live": "https://malayvasa.github.io/GenIden",
       "code": "https://github.com/Malayvasa/GenIden",
@@ -639,7 +639,7 @@
       "pronouns": "he/him",
       "location": "London, UK",
       "title": "36 Days of Type x p5.js",
-      "description": "Animating each character in the 36 Days of Type challenge using p5.js.",
+      "description": "Animación de cada caracter en el desafío 36 días de tipografía, usando p5.js.",
       "extradesc": "",
       "live": "https://36xp5.site",
       "code": "https://editor.p5js.org/p5user1/collections/fqIuymb5X",
@@ -660,7 +660,7 @@
       "pronouns": "she/her",
       "location": "New York, USA",
       "title": "Room/Me",
-      "description": "An interactive visual essay/game that explores self-isolation and self-care during quarantine.",
+      "description": "Un ensayo/juego interactivo visual que explora auto-aislamiento y auto-cuidado durante la cuarentena.",
       "extradesc": "",
       "live": "https://kikikikikat-room-me.glitch.me/",
       "code": "https://glitch.com/~kikikikikat-room-me",
@@ -681,7 +681,7 @@
       "pronouns": "she/her",
       "location": "Seattle, WA, USA",
       "title": "What's Up In The Gut?",
-      "description": "A walk-and-play game that explains children how microbiome works. By interacting with physical controllers and balance board, children have to grab good nutrients to produce fiber, and zap bad bacteria—everything that helps to keep the gut healthy!",
+      "description": "Un juego para explicarle a les niñes cómo funciona la microbioma. Al interactuar con controladores físicos y una tabla de equilibrio, les niñes tienen que tomar nutrietes para producir fibra, y atacar a las bacterias malas — ¡todo para mantener el estómago saludable!",
       "extradesc": "View it being [played live (with physical controllers)] (https://bit.ly/whatsupinthegut)\n Also, [here is the link](https://bit.ly/whatsupinthegut) for the web-based game. It can be played without physical controllers, 1—circle, 2—triangle, 3—zapping.",
       "live": "https://bit.ly/whatsupinthegut",
       "code": "https://github.com/olgahwang/InsideBody_Game",
@@ -702,7 +702,7 @@
       "pronouns": "They/them",
       "location": "New York, New York",
       "title": "Singing Buddy",
-      "description": "This project uses computer vision and and vocal audio to make a musical instrument that allows the user to sing.",
+      "description": "Este proyecto usa visión por computadora y audio vocal para hacer un instrumento musical que le permita al usuario cantar.",
       "extradesc": "",
       "live": "https://editor.p5js.org/lishap/present/JebXEXumC",
       "code": "https://editor.p5js.org/lishap/sketches/JebXEXumC",
