--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -1,6 +1,6 @@
 {
     "Acknowledgements":"Agradecimientos",
-    "Acknowledgements_Description": "Me gustaría agradecer a [GSoC](https://summerofcode.withgoogle.com/) y a [Processing Foundation](https://processingfoundation.org/) por el financiamiento de este proyecto. También me gustaría agradecer a mis maravilloses mentores Yining Shi y Joey Lee por ayudarme. Finalmente,me gustaría agraedecer a Lauren McCarthy, Saber Khan, Inhwa Yeom, Aarón Montoya-Moraga y a les mantenedores y contribuyentes a p5 por ayudarme en mi camino de fuente abierta y este proyecto.",
+    "Acknowledgements_Description": "Me gustaría agradecer a [GSoC](https://summerofcode.withgoogle.com/) y a [Processing Foundation](https://processingfoundation.org/) por el financiamiento de este proyecto. También me gustaría agradecer a mis maravilloses mentores Yining Shi y Joey Lee por ayudarme. Finalmente,me gustaría agraedecer a Lauren McCarthy, Saber Khan, Inhwa Yeom, Aarón Montoya-Moraga, Ashley Kang y a les mantenedores y contribuyentes a p5 por ayudarme en mi camino de fuente abierta y este proyecto.",
     "viz2.1":"autodidactas",
     "viz2.2":"y animadores, artistas, creadores de juegos, tecnologistas creatives, educadores, diseñadores, diseñadores gráficos, editores gráficos, diseñadores de experiencias educativas, gerentes de proyectos, ingenieres de software, estudiantes, profesores escolares, profesores universitarios, investigadores de visuales",
     "viz2.3":"con todo nivel de experiencias",
