--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -5,6 +5,7 @@
     "viz2.2":"y animadores, artistas, creadores de juegos, tecnologistas creatives, educadores, diseñadores, diseñadores gráficos, editores gráficos, diseñadores de experiencias educativas, gerentes de proyectos, ingenieres de software, estudiantes, profesores escolares, profesores universitarios, investigadores de visuales",
     "viz2.3":"con todo nivel de experiencias",
     "Directions":"¡Haz click en el texto rosado para revelar las gráficas!",
+    "Directions2":"Press space to interact with this visualization!",
 "Created By":"Creado Por",
 "2020Gallery_Intro":"Para aprender más sobre el proyecto y cómo fue realizado, haz click en la imagen correspondiente. Te invitamos a dejar cualquier sugerencia o comentario en nuestro [libro de visitas](https://forms.gle/nJ4Z6v31z2HZ6boaA)!",
  "Project Links":"Enlaces de los proyectos",
