--- a/src/locales/zh_Hans/translation.json
+++ b/src/locales/zh_Hans/translation.json
@@ -3,6 +3,7 @@
   "viz2.2": "以及动画师，艺术家，游戏制作者，创意技术人员，课程计划者，设计师，图形设计师，图形编辑，学习经验设计师，项目经理，软件工程师，学生，教师，大学教职员工，可视化研究人员",
   "viz2.3": "有着不同的经历",
   "Directions": "点击粉红色的文字来查看图表！",
+  "Directions2":"按下空格来进行互动！",
   "Created By": "创作者",
   "2020Gallery_Intro": "要了解有关该项目及其制作方式的更多信息，请点击每个卡片的预览图片。 \n\n请随时在我们的[guestbook](https://forms.gle/nJ4Z6v31z2HZ6boaA)中留下反馈或评论!",
   "Project Links": "作品链接",
