--- a/src/locales/zh_Hans/translation.json
+++ b/src/locales/zh_Hans/translation.json
@@ -2,6 +2,7 @@
   "viz2.1": "自学者",
   "viz2.2": "以及动画师，艺术家，游戏制作者，创意技术人员，课程计划者，设计师，图形设计师，图形编辑，学习经验设计师，项目经理，软件工程师，学生，教师，大学教职员工，可视化研究人员",
   "viz2.3": "有着不同的经历",
+  "Directionsmap":"点击星号来了解更多",
   "Directions": "点击粉红色的文字来查看图表！",
   "Directions2":"按下空格来进行互动！",
   "Created By": "创作者",
@@ -343,7 +344,7 @@
       "answer3": "p5.js is used to composite the text over the background image, and to allow uploading one's own imagery to produce a körpe from.",
       "answer4": "The web editor!",
       "answer5": "I wasn't able to find a color halftone feature, and am interested in contributing one, perhaps to the p5.riso library.",
-      "answer6": "Some of our inspirations: https://www.instagram.com/dotface_official/, https://www.instagram.com/explore/tags/protestbannerlendinglibrary/ (by https://www.instagram.com/aramhansifuentes/)",
+      "answer6": "Some of our inspirations: [@dotface_official](https://www.instagram.com/dotface_official/), the instagram tag [protestbannerlendinglibrary](https://www.instagram.com/explore/tags/protestbannerlendinglibrary/) by ([@aramhansifuentes](https://www.instagram.com/aramhansifuentes/))",
       "social": "http://towardsanidealplace.com/,https://www.instagram.com/columnine/,https://unterbahn.com/",
       "id": "project-1",
       "picid": "1.png"
