added person to entry

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -323,7 +323,7 @@
 "showcase2020":
 [
     {
-      "author": "Aisha Jandosova, Kuat Abeshev, Jeffrey Yoo Warren",
+      "author": "Aisha Jandosova, Kuat Abeshev, Jeffrey Yoo Warren, Irina Mednikova",
       "pronouns": "Aisha: ella, Kuat: él, Jeff: él",
       "location": "Almaty, Kazakhstan; Munich, Alemania; Providence, Rhode Island",
       "title": "ProtestKor.pe",
