--- a/src/locales/zh_Hans/translation.json
+++ b/src/locales/zh_Hans/translation.json
@@ -329,7 +329,7 @@
   ],
   "showcase2020": [
     {
-      "author": "Aisha Jandosova, Kuat Abeshev, Jeffrey Yoo Warren",
+      "author": "Aisha Jandosova, Kuat Abeshev, Jeffrey Yoo Warren, Irina Mednikova",
       "pronouns": "Aisha: she/her/hers, Kuat: he/him/his, Jeff: he/him/his",
       "location": "Almaty, Kazakhstan; Munich, Germany; Providence, Rhode Island",
       "title": "ProtestKor.pe",
