lowkey json updates

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -586,7 +586,7 @@
       "tools": "p5.shader,p5.Camera,p5.FFT",
       "answer1": "I am a graduate student majoring mainly in DNA nanotechnology and bioinformatics. I am currently doing an internship at a company called \"Life is Tech!\".",
       "answer2": "I'm a mentor for a company called Life is Tech! that teaches media arts to middle and high school students. We have a new curriculum that will be using p5.js instead of openFrameworks. So, I started learning there. It is the first project that I've submitted.",
-      "answer3": "I was inspiredby my [boss] (https://www.instagram.com/keitotakaishi/).",
+      "answer3": "I was inspired by my [boss] (https://www.instagram.com/keitotakaishi/).",
       "answer4": "My favorite feature is the drowingContext. I like the part where you can easily add shadows to the shapes.",
       "answer5": "I had trouble switching scenes between WEBGL space and non-WEBGL space. In the end, I decided to switch between drawing different scenes in one and the same texture at regular intervals. The scene was achieved by clear to erase it.",
       "answer6": "You should check out the way shaders are written. Fragment shaders in particular have a lot of possibilities. If you want to write good and cool post-effects, you should learn to do this.",
@@ -834,7 +834,7 @@
       "extradesc": "",
       "live": "https://samantharuizdesign.com/audio-visualizer/",
       "code": "https://editor.p5js.org/samsamr33@gmail.com/sketches/998nqwWxY",
-      "type": "Visual",
+      "type": ["Visual","Sound"],
       "tools": "p5.sound",
       "answer1": "I just graduated with a degree in Graphic and Interactive Design from Tyler School of Art and Architecture in May and recently accepted a full time web and graphic design job.",
       "answer2": "I first leaned about p5.js in my creative coding class at school. My professor Jenny Kowalski was great at gradually introducing us to the library. We started with small projects like building an image or creating patterns. We also watched The Coding Train on Youtube on a weekly basis which was incredibly helpful in learning the language and different functions.",
