--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -1,12 +1,12 @@
 {
-  "viz2.1":"자가 학습자self-learners",
-  "viz2.2":"애니메이터, 아티스트, 게임 창작자, 크리에이티브 테크놀로지스트, 커리큘럼 기획자, 디자이너, 그래픽 디자이너, 그래픽 편집자, 학습 경험 설계자, 프로젝트 매니저, 소프트웨어 엔지니어, 학생, 교사, 대학교 교수진, 시각화 연구자 and animators, artists, game makers, creative-technologists, curriculum planners, designers, graphic designers, graphics editors, learning experience designers, project managers, software engineer, student, teachers, university faculty members, visualization researchers",
-  "viz2.3":"w/ all kinds of experiences",
+  "viz2.1":"자기주도 학습자",
+  "viz2.2":"애니메이터, 아티스트, 게임 창작자, 크리에이티브 테크놀로지스트, 커리큘럼 기획자, 디자이너, 그래픽 디자이너, 그래픽 편집자, 학습 경험 설계자, 프로젝트 매니저, 소프트웨어 엔지니어, 학생, 교사, 대학교 교수진, 시각화 연구자",
+  "viz2.3":"그 외 다양한 경험을 가진 사람들입니다!",
   "Directions":"분홍색 글씨를 누르면 그래프가 바뀝니다!",
   "Created By":"제작: ",
  "2020Gallery_Intro":"프로젝트와 그 제작 과정에 대한 자세한 설명을 보려면, 미리보기 이미지를 클릭하세요. To learn more about the project and how it was made, click on the image of each card preview. \n\n 또, [방명록](https://forms.gle/nJ4Z6v31z2HZ6boaA)에 피드백과 의견을 자유로이 남겨주세요!",
  "Project Links": "프로젝트 링크",
- "Visualizations":"V시각화",
+ "Visualizations":"시각화",
  "Projects":"프로젝트",
  "Social Media":"SNS",
  "Tools":"Tools",
@@ -16,7 +16,7 @@
  "About2":"어떻게 구성되나요?",
  "About3":"추가 확인 사항What else should I check out?",
  "Acknowledgements":"감사 인사",
- "Acknowledgements_Description": "I'd like to thank [GSoC](https://summerofcode.withgoogle.com/) and the [Processing Foundation](https://processingfoundation.org/) for funding this project. I'd also like to thank my wonderful mentors Yining Shi and Joey Lee for helping me. Finally I'd like to thank Lauren McCarthy, Saber Khan, Inhwa Yeom, Aarón Montoya-Moraga and the p5 maintainers and contributors for helping me out on my open source journey and this project.",
+ "Acknowledgements_Description": "이 프로젝트를 후원해준 [GSoC](https://summerofcode.withgoogle.com/)와 [프로세싱 재단](https://processingfoundation.org/)에 감사 말씀 드립니다. 또 저의 훌륭한 멘토이신 이닝 쉬(Yining Shi)님과 조이 리(Joey Lee)님께도 감사 말씀드립니다. 마지막으로, 로렌 맥카시, 세이버 칸, 염인화, 아론 몬토야-모라가Aarón Montoya-Moraga와 그 외 p5 관리자 및 기여자들에게  and the p5 maintainers and contributors for helping me out on my open source journey and this project.",
  "Answer1": "The p5.js Showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 Showcase here](https://p5js.org/showcase/)) and is currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the Showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
  "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the Showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
  "Answer3":"Make some sketches of your own with the [p5.js editor](https://editor.p5js.org/), discover more with [OpenProcessing](https://www.openProcessing.org/), and learn more with the [Coding Train](https://www.youtube.com/user/shiffman) and [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
@@ -30,26 +30,26 @@
  "Welcome":"2020년 p5.js 쇼케이스에 오신걸 환영합니다! Welcome to the p5.js 2020 showcase!",
  "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
  "2020_intro1.5":"Personally as the curator for this year's Showcase, I can only describe the experience in one word: _inspired_. The amount of passion and creative curiosity that beams from everyone's work has me in awe - and I truly believes encapsulates the spirit of the p5.js community.",
- "2020_intro2":"Learn more about the p5.js community below!",
- "Viz1":"this year we got submissions from...",
- "Viz2":"our submitters are...",
- "Viz3":"to them p5.js is...",
- "Viz4":"view the projects →",
- "Jump to":"Jump to:",
+ "2020_intro2":"아래에서 p5.js 커뮤니티에 대해 더 알아보세요!",
+ "Viz1":"올해 지원서는 아래의 지역에서...",
+ "Viz2":"지원자들은...",
+ "Viz3":"이들에게 p5.js란...",
+ "Viz4":"프로젝트 보러가기 →",
+ "Jump to":"바로가기:",
  "filter by":"filter by",
  "filters":[
     {"name": "전체"},
-    {"name": "시각 조형Visual"},
-    {"name": "데이터 시각화Data Visualization"},
-    {"name": "게임Game"},
-    {"name": "월드World"},
-    {"name": "텍스트Text"},
-    {"name": "사운드Sound"},
-    {"name": "교육적Educational"},
+    {"name": "시각 조형"},
+    {"name": "데이터 시각화"},
+    {"name": "게임"},
+    {"name": "세상 이야기World"},
+    {"name": "텍스트"},
+    {"name": "사운드"},
+    {"name": "교육 자료"},
     {"name": "교육Teaching"},
-    {"name": "시뮬레이션Simulation"},
-    {"name": "툴Tool"},
-    {"name": "카메라Camera"}
+    {"name": "시뮬레이션"},
+    {"name": "툴"},
+    {"name": "카메라"}
  ],
  "showcase2019":[
     {
