--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -1,52 +1,54 @@
 {
   "viz2.1":"자기주도 학습자",
-  "viz2.2":"애니메이터, 아티스트, 게임 창작자, 크리에이티브 테크놀로지스트, 커리큘럼 기획자, 디자이너, 그래픽 디자이너, 그래픽 편집자, 학습 경험 설계자, 프로젝트 매니저, 소프트웨어 엔지니어, 학생, 교사, 대학교 교수진, 시각화 연구자",
+  "viz2.2":"애니메이터, 아티스트, 게임 창작자, 크리에이티브 테크놀로지스트, 커리큘럼 기획자, 디자이너, 그래픽 디자이너, 그래픽 편집자, 학습 경험 설계자, 프로젝트 매니저, 소프트웨어 엔지니어, 학생, 교사, 대학 교수진, 시각화 연구자",
   "viz2.3":"그 외 다양한 경험을 가진 사람들입니다!",
+  "Directionsmap":"별표 아이콘을 클릭하여 더 많은 걸 알아보세요!",
   "Directions":"분홍색 글씨를 누르면 그래프가 바뀝니다!",
-  "Created By":"제작: ",
- "2020Gallery_Intro":"프로젝트와 그 제작 과정에 대한 자세한 설명을 보려면, 미리보기 이미지를 클릭하세요. To learn more about the project and how it was made, click on the image of each card preview. \n\n 또, [방명록](https://forms.gle/nJ4Z6v31z2HZ6boaA)에 피드백과 의견을 자유로이 남겨주세요!",
+  "Directions2":"스페이스바를 누르면 아래의 시각물이 바뀝니다!",
+  "Created By":"기획 및 제작: ",
+ "2020Gallery_Intro":"프로젝트와 그 제작 과정에 대한 자세한 설명을 보려면, 미리보기 이미지를 클릭하세요. \n\n 또, [방명록](https://forms.gle/nJ4Z6v31z2HZ6boaA)에 피드백과 의견을 자유로이 남겨주세요!",
  "Project Links": "프로젝트 링크",
- "Visualizations":"시각화",
- "Projects":"프로젝트",
- "Social Media":"SNS",
+ "Visualizations":"지원자 데이터",
+ "Projects":"프로젝트 갤러리",
+ "Social Media":"개인 SNS 계정",
  "Tools":"Tools",
- "Live":"Live",
+ "Live":"라이브 데모",
  "Code":"코드",
  "About1":"p5.js 쇼케이스란?",
- "About2":"어떻게 구성되나요?",
- "About3":"추가 확인 사항What else should I check out?",
- "Acknowledgements":"감사 인사",
- "Acknowledgements_Description": "이 프로젝트를 후원해준 [GSoC](https://summerofcode.withgoogle.com/)와 [프로세싱 재단](https://processingfoundation.org/)에 감사 말씀 드립니다. 또 저의 훌륭한 멘토이신 이닝 쉬(Yining Shi)님과 조이 리(Joey Lee)님께도 감사 말씀드립니다. 마지막으로, 로렌 맥카시, 세이버 칸, 염인화, 아론 몬토야-모라가Aarón Montoya-Moraga와 그 외 p5 관리자 및 기여자들에게  and the p5 maintainers and contributors for helping me out on my open source journey and this project.",
- "Answer1": "The p5.js Showcase is an online gallery of work created with [p5.js](https://p5js.org/), an open source creative computing library. It was created by [Ashley Kang](https://ashleykang.dev) in 2019 ([view the 2019 Showcase here](https://p5js.org/showcase/)) and is currently curated by [Connie Liu](https://connieliu0.github.io). \n \n The purpose of the Showcase is to celebrate how people are using and learning p5.js to make creative work with the aim of conveying our core values of inclusivity.",
- "Answer2":"Usually the p5.js will open up a call for submissions via [Twitter](https://twitter.com/p5xjs) or [Instagram](https://www.instagram.com/p5xjs/)! For the last two years, the Showcase has been run as a [GSoC project](https://summerofcode.withgoogle.com/).",
- "Answer3":"Make some sketches of your own with the [p5.js editor](https://editor.p5js.org/), discover more with [OpenProcessing](https://www.openProcessing.org/), and learn more with the [Coding Train](https://www.youtube.com/user/shiffman) and [Cozy Coding](https://www.twitch.tv/cozycoding/)!",
- "Question1":"요새 어떻게 지내세요? p5.js를 어떻게 처음 시작하였나요? What are you up to? How did you get started with p5.js?",
- "Question2":"이 프로젝트에서 p5.js는 어떻게 쓰였나요? How did you use p5.js in this project?",
- "Question3":"가장 좋아하는 p5.js 기능은? What's your favorite p5.js feature?",
- "Question4":"이 프로젝트를 하면서 어려웠던 점이 있나요? 만약 있다면, 어떻게 극복했나요? Did you face any challenges working on this project? If so, how did you overcome them?",
- "Question5":"이 프로젝트의 멋진 점을 알려주세요! What's a cool thing we should check out?",
- "2019about": "아래에서 2019년 여름 [강예은(Ashely Kang)](https://ashleykang.dev/)님이 최초로 기획, 제작한 p5.js 쇼케이스를 볼 수 있습니다. in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! 미리보기 이미지를 클릭하여 각 프로젝트에 대해 더 많이 알아보세요. Learn more about each one by clicking on the preview. \n \n[2019년 쇼케이스 보러가기](https://p5js.org/showcase/)",
- "About":"p5.js 쇼케이스에 대하여 About the p5.js Showcase",
- "Welcome":"2020년 p5.js 쇼케이스에 오신걸 환영합니다! Welcome to the p5.js 2020 showcase!",
- "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
- "2020_intro1.5":"Personally as the curator for this year's Showcase, I can only describe the experience in one word: _inspired_. The amount of passion and creative curiosity that beams from everyone's work has me in awe - and I truly believes encapsulates the spirit of the p5.js community.",
+ "About2":"참여 방법",
+ "About3":"참고 사항",
+ "Acknowledgements":"감사의 말",
+ "Acknowledgements_Description": "이 프로젝트를 후원해준 [GSoC](https://summerofcode.withgoogle.com/)와 [프로세싱 재단](https://processingfoundation.org/)에 감사함을 전합니다. 또 저의 훌륭한 멘토이신 이닝 쉬(Yining Shi)와 조이 리(Joey Lee)님께도 감사드립니다. 마지막으로, 제 오픈 소스 공헌과 쇼케이스 기획 여정을 도와준 로렌 맥카시(Lauren McCarthy), 세이버 칸(Saber Khan), 염인화(Inhwa Yeom), 아론 몬토야-모라가(Aarón Montoya-Moraga), 강예은(Ashley Kang)님과 그 외 p5 유지담당자 및 기여자 모두에게 감사 말씀 전합니다.",
+ "Answer1": "p5.js 쇼케이스는 오픈 소스 라이브러리인, [p5.js](https://p5js.org/) 기반의 창작물을 전시하는 온라인 갤러리입니다. 최초 쇼케이스는 2019년 [강예은](https://ashleykang.dev)님이 기획 및 제작하였습니다. ([2019년 쇼케이스 보러가기](https://p5js.org/showcase/)) 2020년 현재 쇼케이스 큐레이터는 [코니 리우 Connie Liu](https://connieliu0.github.io)입니다. \n \n 쇼케이스의 목적은 p5.js 학습과 활용을 통해 '포용성'이라는 커뮤니티 핵심 가치를 전달하는, 각종 창의적인 작업들을 축하하고 또 기념하는 데에 있습니다.",
+ "Answer2":"쇼케이스 공모 소식은 p5.js 공식 [트위터](https://twitter.com/p5xjs)나 [인스타그램](https://www.instagram.com/p5xjs/)을 통해 접할 수 있습니다! 지난 2년간 p5.js 쇼케이스는 [GSoC 프로젝트](https://summerofcode.withgoogle.com/)의 일환으로 진행되었습니다.",
+ "Answer3":"[p5.js 웹에디터](https://editor.p5js.org/)로 나만의 스케치를 만들어보세요. 또, [오픈프로세싱 OpenProcessing](https://www.openProcessing.org/)에서 더 많은 스케치를 검색하고, [코딩 트레인 Coding Train](https://www.youtube.com/user/shiffman)과 [코지 코딩 Cozy Coding](https://www.twitch.tv/cozycoding/)에서 더 많은 걸 배워보세요!",
+ "Question1":"요새 어떤 작업하세요? 처음 p5.js를 접하게 된 계기가 무엇인가요?",
+ "Question2":"이 프로젝트에서 p5.js를 어떻게 활용했나요?",
+ "Question3":"가장 좋아하는 p5.js 기능은?",
+ "Question4":"이 프로젝트를 진행하며 어려운 점이 있었나요? 어떻게 극복했나요?",
+ "Question5":"더 공유하고 싶은 것을 알려주세요!",
+ "2019about": "아래에서 2019년 여름 [강예은](https://ashleykang.dev/)님이 최초로 기획, 제작한 p5.js 쇼케이스를 볼 수 있습니다. 미리보기 이미지를 클릭하여 각 프로젝트에 대해 더 많이 알아보세요. \n \n[2019년 쇼케이스 보러가기](https://p5js.org/showcase/)",
+ "About":"p5.js 쇼케이스에 대하여",
+ "Welcome":"2020년 p5.js 쇼케이스에 오신걸 환영합니다!",
+ "2020_intro1":"2020년 여름, 새롭게 확장될 올해 쇼케이스를 위해 전세계 p5.js 커뮤니티를 대상으로 작품 공모를 진행하였습니다. 사운드 기반 시각화 작업부터 교육용 게임, 그리고 수학 시뮬레이션에 이르는, 매우 다양한 프로젝트들을 아래에서 확인할 수 있습니다.",
+ "2020_intro1.5":"이번 년도 쇼케이스 큐레이터로서의 제 경험은 _inspired_라는 한 단어로 설명할 수 있습니다. 모든 공모 작업으로부터 발산하는 열정과 창의적인 호기심 앞에서 저는 경외심을 느꼈습니다. 그리고 이것이 p5.js 커뮤니티와 그 정신을 요약한다고 생각합니다.",
  "2020_intro2":"아래에서 p5.js 커뮤니티에 대해 더 알아보세요!",
- "Viz1":"올해 지원서는 아래의 지역에서...",
+ "Viz1":"올해 지원 지역은...",
  "Viz2":"지원자들은...",
  "Viz3":"이들에게 p5.js란...",
- "Viz4":"프로젝트 보러가기 →",
+ "Viz4":"프로젝트 갤러리 →",
  "Jump to":"바로가기:",
- "filter by":"filter by",
+ "filter by":"필터",
  "filters":[
     {"name": "전체"},
-    {"name": "시각 조형"},
-    {"name": "데이터 시각화"},
+    {"name": "비쥬얼"},
+    {"name": "데이터시각화"},
     {"name": "게임"},
-    {"name": "세상 이야기World"},
+    {"name": "세계"},
     {"name": "텍스트"},
     {"name": "사운드"},
-    {"name": "교육 자료"},
-    {"name": "교육Teaching"},
+    {"name": "정보"},
+    {"name": "교육"},
     {"name": "시뮬레이션"},
     {"name": "툴"},
     {"name": "카메라"}
@@ -324,7 +326,7 @@
       "pronouns": "Aisha: she/her/hers, Kuat: he/him/his, Jeff: he/him/his",
       "location": "Almaty, Kazakhstan; Munich, Germany; Providence, Rhode Island",
       "title": "ProtestKor.pe",
-      "description": "PROTEST KORPE is inspired by quraq körpe, a type of Kazakh quilt; like a quraq körpe, civic activism and protection of our rights depend on the voices and contributions of each of us. In this work, each square on our \"collective quilt\" is important to sew a new Kazakh reality.\n\nThe website enables protestors to create a körpe square with a slogan, including solidarity with Asya, speaking against police violence, and supporting free expression, which can then be [uploaded to Instagram to form a part of the unfolding collective körpe](https://www.instagram.com/explore/tags/СправедливостьДляАси).",
+      "description": "PROTEST KORPE는 카자흐스탄 퀼트의 일종인 \"quraq körpe\"로부터 영감을 받았습니다. 마치 quraq körpe처럼, 인권 보호를 위한 시민 행동 역시 개인의 목소리와 기여가 한 데 모여 만들어집니다. 이 \"공동 퀼트\"의 각 격자는 카자흐스탄의 새로운 현실을 직조하는 중요한 요소 입니다. \n\n이 웹사이트를 통해, 운동가들은 슬로건이 적힌 körpe 격자 한 칸을 직접 생성할 수 있습니다. 그러한 슬로건들은 Asya Tulesova와의 연대, 경찰 폭력에 대한 반대 목소리, 자유 표현에 대한 지지를 담으며, [인스타그램](https://www.instagram.com/explore/tags/СправедливостьДляАси)에 업로드되어 공동 körpe을 계속해서 펼쳐나갑니다.",
       "extradesc": "",
       "live": "https://protestkor.pe",
       "code": "https://github.com/jywarren/protest-banners/",
@@ -345,7 +347,7 @@
       "pronouns": "he/him",
       "location": "Bangalore, India",
       "title": "Plastic Sweeper",
-      "description": "Plastic sweeper is a data visualization that helps the user imagine the true magnitude of plastic waste in our oceans. This is important because most people cannot understand the actual scale of large numbers and I feel this is one of the reasons why people are apathetic towards climate change and pollution.",
+      "description": "Plastic Sweeper는 해양 속 플라스틱 폐기물의 실제 규모에 대한 상상을 돕는 데이터 시각화입니다. 대부분의 사람들이 그 규모가 얼마나 거대한지 가늠하지 못하고, 그로 인해 기후 변화와 오염 문제에 무관심한 것일 수도 있다고 봅니다. 따라서, 이처럼 규모에 대한 상상을 돕는 작업이 중요하다고 생각합니다.",
       "extradesc": "",
       "live": "https://kind-lovelace-0bae83.netlify.app/",
       "code": "https://github.com/CommieP/PLASTICSWEEPER",
