Updated class name and tried to link forms from translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -28,7 +28,7 @@
  "Question4":"Did you face any challenges working on this project? If so, how did you overcome them?",
  "Question5":"What's a cool thing we should check out?",
  "2019about": "Curated by [Ashley Kang](https://ashleykang.dev/) in the summer of 2019, below is the first ever curated collection of the p5.js Showcase! Learn more about each one by clicking on the preview. \n \n[View the original implementation here!](https://p5js.org/showcase/)",
- "2021_notice1": "Submissions for the p5.js 2021 Showcase: The Love Ethic are now open! Submit or nominate a project here! If Google is not available in your region, please email chankati@usc.edu to submit.",
+ "2021_notice1": "Submissions for the p5.js 2021 Showcase: The Love Ethic are now open! Submit or nominate a project [here](https://forms.gle/vgLMbrGDLkDjFgEU6). If Google is not available in your region, please email chankati@usc.edu to submit. Submission period ends August 1st 2021.",
  "About":"About the p5.js Showcase",
  "Welcome":"Welcome to the p5.js 2020 showcase!",
  "2020_intro1":"During Summer 2020 we asked the p5.js community around the world to submit their pieces for a new and expanded edition of the Showcase. Below you'll find all kinds of works ranging from sound-based visualizations to educational games to mathematical simulations.",
